--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "arielmejiadev/larapex-charts": "^1.0",
         "barryvdh/laravel-dompdf": "^0.8.6",
+        "consoletvs/charts": "^6.5",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
