--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.2.5|^8.0",
         "arielmejiadev/larapex-charts": "^1.0",
         "barryvdh/laravel-dompdf": "^0.8.6",
         "consoletvs/charts": "^6.5",
