--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "arielmejiadev/larapex-charts": "^1.0",
         "barryvdh/laravel-dompdf": "^0.8.6",
         "consoletvs/charts": "^6.5",
+        "dompdf/dompdf": "^0.8.6",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
